--- a/dada/templates/error_over_subscription_quota_screen.tmpl
+++ b/dada/templates/error_over_subscription_quota_screen.tmpl
@@ -4,10 +4,8 @@
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 <p>
- This Mailing List currently cannot have any more subscribers.
+ This Mailing List has reached its set Subscriber quota. 
 </p>
-
-<!--- tmpl_var list_settings.list_name --><
 
 <!-- tmpl_include error_footer_widget.tmpl -->
 
