Added client-side form validation for the, "Create a new list" screen, separated out js only used for installation, in its own js file

--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -24,11 +24,12 @@
 
 
 
-	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
+	<form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" id="create_new_list">
+
 	 <input type="hidden" name="f"       value="new_list" />
 	 <input type="hidden" name="process" value="true" />
 	 <input type="hidden" name="root_password" value="<!-- tmpl_var root_password escape="HTML" -->" />
-
+	 <input type="hidden" name="auth_state" value="<!-- tmpl_var auth_state escape="HTML" -->" />
 	<div class="clearskiesbox">
 		
 	<p>Please Fill in all the fields below, to create your new Mailing List</p>
